# krfw

./: .gitignore  LICENSE  build.bat  build.py  build.sh  demo.odin  meson.build
.github/workflows/: ci.yml
demo/: main.cpp  shaders.glsl
krfw/: krfw.h  krfw.odin  krfw_vulkan_loader.h
krfw/vulkan/: loader.odin  procs.odin  renderer.odin  types.odin
src/: demo.cpp  demo.odin  demo_glue_macos.odin  demo_glue_unix.odin  demo_glue_win32.odin
src/imgui/: imgui.odin  imgui_internal.odin
src/imgui/imgui_impl_sdlgpu3/: imgui_impl_sdlgpu3.odin
src/imgui/imgui_impl_vulkan/: imgui_impl_vulkan.odin
src/krfw/: krfw.h  krfw.odin  krfw_vulkan_loader.h  kvk.cpp  kvk.h
src/krfw/kom/: kom.odin
src/krfw/vulkan/: backbuffer.odin  buffer.odin  cocoa_glue.odin  command_buffer.odin  command_pool.odin  commands.odin  device.odin  exported.odin  fences.odin  image.odin  instance.odin  krfw_vulkan.h  krfw_vulkan.odin  loader.odin  public.odin  renderer.odin  resource.odin  resource_pool.odin  semaphores.odin  types.odin  util.odin
src/krfw/vulkan/vma/: vma.odin
